[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = "LeetCode solutions in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
anytree = "^2.13.0"
black = "*"
isort = "*"
loguru = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-sort = { version = ">=0.2.2", extras = ["plugin"] }

[tool.black]
line-length = 105
target-version = ['py312']
include = '.*\.(py|ipynb)$' # All .py and .ipynb files
extend-exclude = '''
/(
    leetcode/_template
)/
'''

[tool.isort]
line_length = 105
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip_glob = ["leetcode/_template/*"]

[tool.ruff]
line-length = 105
target-version = 'py312'
extend-exclude = ["leetcode/_template"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = '**/*.py'
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["return", "no-redef"]
exclude = ["leetcode/_template"]

[tool.pytest.ini_options]
testpaths = ["leetcode"]
python_files = ["tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
