[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = "LeetCode solutions in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.16.1"

[tool.poetry.group.base.dependencies]
anytree = "^2.13.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
cookiecutter = "^2.6.0"
graphviz = "^0.21"
ipykernel = "^6.30.1"
isort = "^6.0.1"
mypy = "^1.17.1"
nbqa = "^1.9.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-sort = { version = ">=0.2.2", extras = ["plugin"] }

[tool.black]
line-length = 105
target-version = ['py312']
include = '.*\.(py|ipynb)$' # All .py and .ipynb files
extend-exclude = '''
/(
    .templates
)/
'''

[tool.isort]
line_length = 105
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip_glob = [".templates/*"]

[tool.ruff]
line-length = 105
target-version = 'py312'
extend-exclude = [".templates"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = '**/*.py'
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["return", "no-redef"]
exclude = [".templates"]

[tool.pytest.ini_options]
testpaths = ["leetcode", "tests"]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
