[tool.poetry]
name = "leetcode-py-sdk"
version = "0.1.0" # use git tag instead
description = "Modern Python LeetCode practice environment with automated problem generation, beautiful data structure visualizations, and comprehensive testing"
authors = ["Wisaroot Lertthaweedech <l.wisaroot@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wisarootl/leetcode-py"
repository = "https://github.com/wisarootl/leetcode-py"
keywords = ["leetcode", "algorithms", "data-structures", "interview-prep", "coding-practice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "leetcode_py"}]
include = ["leetcode_py/cli/resources/**/*"]

[tool.poetry.scripts]
lcpy = "leetcode_py.cli.main:main"

[tool.poetry.dependencies]
python = "^3.13"
cookiecutter = "^2.6.0"
graphviz = "^0.21"
json5 = "^0.9.0"
requests = "^2.32.5"
typer = "^0.17.0"

[tool.poetry.group.base.dependencies]
anytree = "^2.13.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.30.1"
isort = "^6.0.1"
jupytext = "^1.16.6"
mypy = "^1.17.1"
nbqa = "^1.9.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-sort = { version = ">=0.2.2", extras = ["plugin"] }

[tool.black]
line-length = 105
target-version = ['py312']
include = '.*\.(py|ipynb)$' # All .py and .ipynb files
extend-exclude = '''
/(
    leetcode_py/cli/resources
)/
'''

[tool.isort]
line_length = 105
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip_glob = ["leetcode_py/cli/resources/*"]

[tool.ruff]
line-length = 105
target-version = 'py312'
extend-exclude = ["leetcode_py/cli/resources"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = '**/*.py'
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["return", "no-redef"]
exclude = ["leetcode_py/cli/resources"]

[tool.pytest.ini_options]
testpaths = ["leetcode", "tests"]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = ["**/playground.py"]
